--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,37 @@
 {
-    "require": {
-        "qossmic/deptrac": "0.24",
-        "php": "^7.4 || ^8.1",
-        "qossmic/deptrac-shim": "^0.24.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "^3.7",
-        "laminas/laminas-coding-standard": "^2.4"
-    },
-    "autoload": {
-        "psr-4": {
-          "Sfp\\Deptrac\\Builtin\\": "src"
-        }
-      },
-      "autoload-dev": {
-        "psr-4": {
-          "SfpTest\\Deptrac\\Builtin\\": "tests"
-        }
-      },
-    "config": {
-        "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true
-        }
+  "name": "struggle-for-php/sfp-deptrac-builtin",
+  "description": "Deptrac extension to enforce application on framework rule.",
+  "keywords": ["deptrac", "header", "static analysis", "static-analysis"],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "sasezaki",
+      "email": "sasezaki@gmail.com"
     }
+  ],
+  "require": {
+      "qossmic/deptrac": "0.24",
+      "php": "^7.4 || ^8.1",
+      "qossmic/deptrac-shim": "^0.24.0"
+  },
+  "require-dev": {
+      "phpunit/phpunit": "^9.5",
+      "squizlabs/php_codesniffer": "^3.7",
+      "laminas/laminas-coding-standard": "^2.4"
+  },
+  "autoload": {
+      "psr-4": {
+        "Sfp\\Deptrac\\Builtin\\": "src"
+      }
+    },
+    "autoload-dev": {
+      "psr-4": {
+        "SfpTest\\Deptrac\\Builtin\\": "tests"
+      }
+    },
+  "config": {
+      "allow-plugins": {
+          "dealerdirect/phpcodesniffer-composer-installer": true
+      }
+  }
 }
