--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
   ],
   "require": {
       "qossmic/deptrac": "0.24",
-      "php": "^7.4 || ^8.1",
-      "qossmic/deptrac-shim": "^0.24.0"
+      "php": "^7.4 || ^8.1"
   },
   "require-dev": {
       "phpunit/phpunit": "^9.5",
