--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
   "require-dev": {
       "phpunit/phpunit": "^9.5",
       "squizlabs/php_codesniffer": "^3.7",
-      "laminas/laminas-coding-standard": "^2.4"
+      "laminas/laminas-coding-standard": "^2.4",
+    "vimeo/psalm": "^4.27",
+    "psalm/plugin-phpunit": "^0.17.0"
   },
   "autoload": {
       "psr-4": {
