--- a/examples/composer.json
+++ b/examples/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
-        "psr/http-server-handler": "^1.0"
+        "psr/http-server-handler": "^1.0",
+        "laminas/laminas-httphandlerrunner": "^2.2",
+        "laminas/laminas-diactoros": "^2.17"
     },
     "require-dev": {
         "qossmic/deptrac-shim": "^0.24.0"
