--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -14,7 +14,7 @@
 
     <!-- Paths to check -->
     <file>src</file>
-    <file>test</file>
+    <file>tests</file>
 
     <!-- Include all rules from Laminas Coding Standard -->
     <rule ref="LaminasCodingStandard"/>
