--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
       "qossmic/deptrac": "0.24",
-      "php": "^7.4 || ^8.1"
+      "php": "^7.4 || ~8.0.0 || ~8.1.0"
   },
   "require-dev": {
       "phpunit/phpunit": "^9.5",
@@ -31,8 +31,12 @@
       }
     },
   "config": {
-      "allow-plugins": {
+    "sort-packages": true,
+    "allow-plugins": {
           "dealerdirect/phpcodesniffer-composer-installer": true
-      }
+      },
+      "platform": {
+        "php": "7.4.99"
+    }
   }
 }
