--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,17 @@
     }
   ],
   "require": {
-      "qossmic/deptrac": "0.24",
-      "php": "^7.4 || ~8.0.0 || ~8.1.0"
+    "php": "^7.4 || ~8.0.0 || ~8.1.0",
+    "qossmic/deptrac-shim": "0.24.0"
   },
   "require-dev": {
-      "phpunit/phpunit": "^9.5",
-      "squizlabs/php_codesniffer": "^3.7",
-      "laminas/laminas-coding-standard": "^2.4",
-    "vimeo/psalm": "^4.27",
-    "psalm/plugin-phpunit": "^0.17.0"
+    "bamarni/composer-bin-plugin": "^1.8",
+    "laminas/laminas-coding-standard": "^2.4",
+    "phpunit/phpunit": "^9.5",
+    "psalm/plugin-phpunit": "^0.17.0",
+    "qossmic/deptrac": "0.24.0",
+    "squizlabs/php_codesniffer": "^3.7",
+    "vimeo/psalm": "^4.27"
   },
   "autoload": {
       "psr-4": {
@@ -33,8 +35,9 @@
   "config": {
     "sort-packages": true,
     "allow-plugins": {
-          "dealerdirect/phpcodesniffer-composer-installer": true
-      },
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "bamarni/composer-bin-plugin": true
+    },
       "platform": {
         "php": "7.4.99"
     }
