--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,13 @@
   ],
   "require": {
     "php": "^7.4 || ~8.0.0 || ~8.1.0",
-    "qossmic/deptrac-shim": "0.24.0"
+    "qossmic/deptrac-shim": "^1"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.8",
     "laminas/laminas-coding-standard": "^2.4",
     "phpunit/phpunit": "^9.5",
     "psalm/plugin-phpunit": "^0.17.0",
-    "qossmic/deptrac": "0.24.0",
     "squizlabs/php_codesniffer": "^3.7",
     "vimeo/psalm": "^4.27"
   },
@@ -39,7 +38,7 @@
       "bamarni/composer-bin-plugin": true
     },
       "platform": {
-        "php": "7.4.99"
+        "php": "8.1.99"
     }
   }
 }
