--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "autoload-dev": {
       "psr-4": {
-        "SfpTest\\Deptrac\\Builtin\\": "tests"
+        "SfpTest\\Deptrac\\Builtin\\": "test"
       }
     },
   "config": {
