--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "~8.1.0",
+    "php": "~8.1.0 || ~8.2.0",
     "qossmic/deptrac-shim": "^1.0.2"
   },
   "require-dev": {
@@ -36,9 +36,6 @@
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true,
       "bamarni/composer-bin-plugin": true
-    },
-      "platform": {
-        "php": "8.1.99"
     }
   },
   "extra": {
